 NEW    : Simplified Chinese translation
 FIXED  : Chapter message improperly displayed in status bar (for file only)
 FIXED  : Crash with CoreAVC when changing "prefered decoder" setting during playback
 FIXED  : Missing checkmarks on "tearing test" and "display stats" options (bug #2010857)
 FIXED  : Save image/thumbnail not working with EVR (bug #2010681)

v1.1.604.0 - 28 June 2008
======================
 NEW	: Subtitle delay support (this one does not modify the subtitle file)
 NEW    : Polish, Ukrainian, Italian & Slovak translations
 NEW    : Support for M2TS files with H264, VC1, AC3, DTS, LPCM
 NEW    : Mpeg2 support for x64 edition
 CHANGED: Improved support for audio and subtitle switching with internal Mpeg splitter.
 CHANGED: Size shrink for translation DLLs
 CHANGED: New property page for "MPC - Video decoder" standalone filter to select activated codecs
 CHANGED: Option added in "MPC Video Decoder" property page to disable ffmpeg software decoding (to use other decoder instead)
 CHANGED: Added file extensions Evo, M2ts and m4a in option / format
 CHANGED: Force using 3D surface with EVR custom
 CHANGED: x64 executable is now mplayerc64.exe
 FIXED  : Sorenson video was not played when DXVA was activated on internal filter
 FIXED  : Minimum EVR buffer set to 3 (instead of 1)
 FIXED  : Better subtitle synchronization with EVR custom (delay due to buffering remove)
 FIXED  : DXVA compatibility improved with some nVidia cards
 FIXED  : Report subtitle fixes from Guliverkli2
 FIXED  : Incorrect colors with DXVA internal decoder for H264 files with multiple PPS / SPS settings
 FIXED  : Broken FLV playback
 FIXED  : EVR custom presenter incompatibility with Microsoft Mpeg2 & Cyberlink decoder
 FIXED  : DXVA decoding bugs for some H264 files
 FIXED  : Memory leak in DXVA decoder (bug #1962448)
 FIXED  : Crash on stop/play with DXVA decoder
 FIXED  : Random crash with EVR custom